--- a/app/src/main/res/layout/cash_cardview.xml
+++ b/app/src/main/res/layout/cash_cardview.xml
@@ -2,7 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cl_cash"
     android:layout_marginTop="@dimen/dimen_16"
+    android:paddingStart="5dp"
+    android:paddingEnd="12dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -10,7 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:orientation="horizontal"
-        android:id="@+id/title_cash"
+        android:id="@+id/ll_title_cash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -18,6 +21,7 @@
             android:layout_height="wrap_content"
             android:text="@string/digio"
             style="@style/Title"
+            android:id="@+id/title_cash"
             >
 
         </TextView>
@@ -27,6 +31,7 @@
             android:layout_height="wrap_content"
             android:text="@string/cash"
             style="@style/Title"
+            android:id="@+id/title_cash_part2"
             android:textColor="@color/gray"
             >
         </TextView>
@@ -35,19 +40,21 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/spotlight_card_view"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
+        android:id="@+id/card_card_view"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         app:cardCornerRadius="@dimen/dimen_8"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_cash"
+        app:layout_constraintTop_toBottomOf="@+id/ll_title_cash"
 
         >
         <ImageView
             android:id="@+id/imgv_cash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
             >
 
 
