--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -8,12 +8,17 @@
     android:layout_width="wrap_content"
     app:cardCornerRadius="@dimen/dimen_8"
     android:layout_margin="@dimen/dimen_8"
+    android:padding="@dimen/dimen_25"
     >
     <ImageView
         android:id="@+id/imgv_product"
-        android:layout_width="150dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingTop="@dimen/dimen_8"
+        android:paddingBottom="@dimen/dimen_8"
+        android:paddingRight="@dimen/dimen_25"
+        android:paddingLeft="@dimen/dimen_25"
         >
 
 
