--- a/app/src/main/res/layout/item_spotlight.xml
+++ b/app/src/main/res/layout/item_spotlight.xml
@@ -4,14 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/spotlight_card_view"
-    android:layout_height="match_parent"
-    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
     app:cardCornerRadius="@dimen/dimen_8"
+    android:layout_marginEnd="4dp"
+    android:layout_marginStart="4dp"
+    app:cardElevation="2dp"
     >
 <ImageView
     android:id="@+id/imgv_spotilight"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:scaleType="fitXY"
+    android:adjustViewBounds="true"
 
     >
 
